Bug 427427 - Wrap around mode not updating properly on linux
Summary: Wrap around mode not updating properly on linux
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: OpenGL Canvas (other bugs)
Version First Reported In: 4.4.0-beta2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2020-10-07 19:13 UTC by Wojtek Trybus
Modified: 2020-10-08 13:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wojtek Trybus 2020-10-07 19:13:46 UTC
SUMMARY
Wrap around mode instead of updating exactly on time is not updating properly. Usually all the other tiles update approximately once a second, but sometimes the new line isn't displayed at all on any other tile - update needs to be forced with moving a cursor there or zooming, panning the canvas which forces the whole canvas to update.

STEPS TO REPRODUCE
1. Open wrap around mode
2. draw anything

OBSERVED RESULT
other tiles update rarely 

EXPECTED RESULT
immediate change as in krita 4.3

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 20.04
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

ADDITIONAL INFORMATION
Comment 1 Dmitry Kazakov 2020-10-08 13:21:25 UTC
Git commit e8d35edf1f9a6486c6223e3b1ffcb1bd2e4280b3 by Dmitry Kazakov.
Committed on 08/10/2020 at 13:19.
Pushed by dkazakov into branch 'krita/4.4.0'.

Fix canvas updates in WrapAround mode

Since we use partial updates now, we should handle WA mode properly

M  +1    -0    libs/ui/canvas/kis_abstract_canvas_widget.h
M  +27   -8    libs/ui/canvas/kis_canvas2.cpp
M  +5    -0    libs/ui/canvas/kis_qpainter_canvas.cpp
M  +1    -0    libs/ui/canvas/kis_qpainter_canvas.h
M  +6    -0    libs/ui/opengl/kis_opengl_canvas2.cpp
M  +2    -0    libs/ui/opengl/kis_opengl_canvas2.h

https://invent.kde.org/graphics/krita/commit/e8d35edf1f9a6486c6223e3b1ffcb1bd2e4280b3
Comment 2 Dmitry Kazakov 2020-10-08 13:22:09 UTC
Git commit 1c00a48063407a9835f52e9d822ff863b1d98d1c by Dmitry Kazakov.
Committed on 08/10/2020 at 13:22.
Pushed by dkazakov into branch 'krita/4.3'.

Fix canvas updates in WrapAround mode

Since we use partial updates now, we should handle WA mode properly

M  +1    -0    libs/ui/canvas/kis_abstract_canvas_widget.h
M  +27   -8    libs/ui/canvas/kis_canvas2.cpp
M  +5    -0    libs/ui/canvas/kis_qpainter_canvas.cpp
M  +1    -0    libs/ui/canvas/kis_qpainter_canvas.h
M  +6    -0    libs/ui/opengl/kis_opengl_canvas2.cpp
M  +2    -0    libs/ui/opengl/kis_opengl_canvas2.h

https://invent.kde.org/graphics/krita/commit/1c00a48063407a9835f52e9d822ff863b1d98d1c
Comment 3 Dmitry Kazakov 2020-10-08 13:22:40 UTC
Git commit 70a6853a541423d4100760632035c17aefe978b0 by Dmitry Kazakov.
Committed on 08/10/2020 at 13:22.
Pushed by dkazakov into branch 'master'.

Fix canvas updates in WrapAround mode

Since we use partial updates now, we should handle WA mode properly

M  +1    -0    libs/ui/canvas/kis_abstract_canvas_widget.h
M  +27   -8    libs/ui/canvas/kis_canvas2.cpp
M  +5    -0    libs/ui/canvas/kis_qpainter_canvas.cpp
M  +1    -0    libs/ui/canvas/kis_qpainter_canvas.h
M  +6    -0    libs/ui/opengl/kis_opengl_canvas2.cpp
M  +2    -0    libs/ui/opengl/kis_opengl_canvas2.h

https://invent.kde.org/graphics/krita/commit/70a6853a541423d4100760632035c17aefe978b0
Comment 4 Dmitry Kazakov 2020-10-08 13:23:48 UTC
The fix should appear in this build: 

https://binary-factory.kde.org/job/Krita_Stable_Appimage_Build/896/