Fix canvas updates in WrapAround mode

Since we use partial updates now, we should handle WA mode properly

BUG:427427